feat: Add GitHub workflows, issue templates, and contribution guidelines
- Add CI/CD workflow with testing and deployment
- Add issue templates for bugs and features
- Add PR template
- Add CONTRIBUTING.md

--- a/.env
+++ b/.env
@@ -6,6 +6,13 @@ CALIBRE_SERVER_URL=http://localhost:8080
 CALIBRE_USERNAME=sandraschipal@hotmail.com
 CALIBRE_PASSWORD=Sec1000cal
 
+# Library Configuration
+# Option 1: Set a base path to auto-discover libraries as subdirectories
+CALIBRE_BASE_PATH=L:/Multimedia Files/Written Word
+
+# Option 2: Manually specify library paths as JSON
+# CALIBRE_LIBRARY_PATHS={"main": "L:/Multimedia Files/Written Word/Main", "it": "L:/Multimedia Files/Written Word/IT", "japanese": "L:/Multimedia Files/Written Word/Japanese", "academic": "L:/Multimedia Files/Written Word/Academic"}
+
 # Performance Settings  
 CALIBRE_TIMEOUT=30
 CALIBRE_MAX_RETRIES=3
