Update server configuration and add GitHub workflows

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 
 # Calibre Server Connection
 CALIBRE_SERVER_URL=http://localhost:8080
-CALIBRE_USERNAME=sandraschipal@hotmail.com
+CALIBRE_USERNAME=sandra
 CALIBRE_PASSWORD=Sec1000cal
 
 # Library Configuration
