--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "calibre-mcp"
 version = "1.0.0"
-description = "FastMCP 2.0 server for Calibre e-book library management"
+description = "FastMCP 2.12+ server for Calibre e-book library management"
 authors = [
     {name = "Sandra", email = "sandra@example.com"}
 ]
@@ -23,26 +23,25 @@ classifiers = [
 ]
 
 dependencies = [
-    "fastmcp>=2.10.1",
-    "httpx>=0.25.0",
-    "pydantic>=2.0.0",
-    "python-dotenv>=1.0.0",
-    "rich>=13.0.0",
-    "structlog>=23.1.0",
-    "asyncio"
+    "fastmcp>=2.12.0",
+    "httpx>=0.27.0",
+    "pydantic>=2.9.0",
+    "python-dotenv>=1.0.1",
+    "rich>=13.8.0",
+    "structlog>=24.4.0"
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0.0",
-    "pytest-asyncio>=0.21.0",
-    "pytest-cov>=4.0.0",
-    "black>=23.0.0",
-    "ruff>=0.1.0",
-    "mypy>=1.0.0",
-    "bandit>=1.7.0",
-    "twine>=4.0.0",
-    "build>=0.10.0"
+    "pytest>=8.3.0",
+    "pytest-asyncio>=0.23.0",
+    "pytest-cov>=5.0.0",
+    "black>=24.0.0",
+    "ruff>=0.6.0",
+    "mypy>=1.11.0",
+    "bandit>=1.7.8",
+    "twine>=5.1.0",
+    "build>=1.2.0"
 ]
 
 [project.urls]
