feat: FastMCP 2.14.1+ compliance and server startup fixes
- Update to FastMCP 2.14.1+ with lifespan support and async stdio transport
- Fix relative import errors by converting to absolute imports
- Remove Unicode emojis from logger messages to prevent encoding crashes
- Fix Cursor MCP configuration with absolute paths
- Remove non-standard launcher files, use direct script execution
- Update documentation and changelog with all fixes
- Fix test suite compatibility with FastMCP FunctionTool objects
- Add FastMCP persistent storage backend support

BREAKING CHANGES:
- Server now requires FastMCP 2.14.1+
- Direct script execution: python src/calibre_mcp/server.py
- Removed run_server.py and server/server.py launchers

--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,12 @@
   },
   "server": {
     "type": "python",
-    "entry_point": "server/server.py",
+    "entry_point": "src/calibre_mcp/server.py",
     "mcp_config": {
       "command": "python",
-      "args": ["${__dirname}/server/server.py"],
+      "args": ["src/calibre_mcp/server.py"],
       "env": {
-        "PYTHONPATH": "${PWD}",
+        "PYTHONPATH": "${__dirname}/src",
         "PYTHONUNBUFFERED": "1"
       }
     }
