--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "calibre-mcp"
 version = "1.0.0"
-description = "FastMCP 2.13+ server for Calibre e-book library management with persistent storage"
+description = "FastMCP 2.14.1+ server for Calibre e-book library management with persistent storage"
 authors = [
     {name = "Sandra", email = "sandra@example.com"}
 ]
@@ -23,7 +23,7 @@ classifiers = [
 ]
 
 dependencies = [
-    "fastmcp>=2.13.0",
+    "fastmcp>=2.14.1,<2.15.0",
     "fastapi>=0.115.0",
     "httpx>=0.27.0",
     "pydantic>=2.9.0",
