feat: Add Zed IDE MCP extension support
- Add extension.toml manifest for Zed IDE integration
- Add Cargo.toml and Rust bridge for Wasm extension
- Add build script for cross-platform compilation
- Enable calibre-mcp MCP server to run as Zed extension

--- a/manifest.json
+++ b/manifest.json
@@ -170,8 +170,7 @@
     }
   ],
   "compatibility": {
-    "platforms": ["win32", "darwin", "linux"],
-    "python": ">=3.10"
+    "platforms": ["win32", "darwin", "linux"]
   },
   "keywords": [
     "calibre",
