Add Calibre plugin, portmanteau tools, extended metadata, VL from query
- Calibre plugin: extended metadata panel (translator, first_published, user comments)
- VL from query: create saved searches from webapp backend search
- Portmanteau tools: manage_descriptions, manage_series, manage_publishers, manage_user_comments, manage_extended_metadata, manage_times
- User data DB: calibre_mcp_data.db for user comments and extended metadata
- Date filters: pubdate_start/end, added_after/before in query_books
- Docs: CALIBRE_PLUGIN_DESIGN, IMPLEMENTATION_NOTES, CHANGELOG, README

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,13 @@
 # Copy this file to .env and update with your actual values
 
 # Calibre Server Connection
-CALIBRE_SERVER_URL=http://localhost:8080
-CALIBRE_USERNAME=your_calibre_username
-CALIBRE_PASSWORD=your_calibre_password
+CALIBRE_SERVER_URL=http://localhost:8099
+CALIBRE_USERNAME=sandra
+CALIBRE_PASSWORD=Sec1000cal
+
+# Library Configuration
+# Option 1: Set a base path to auto-discover libraries as subdirectories
+CALIBRE_BASE_PATH="L:/Multimedia Files/Written Word"
 
 # Performance Settings  
 CALIBRE_TIMEOUT=30
