feat(webapp): retractable sidebar, all nav pages, AI chat, series API, author Wikipedia links
- Sidebar: Overview, Libraries, Books, Search, Authors, Series, Tags, Import, Export, Chat, Logs, Settings, Help
- Overview dashboard with library stats
- Authors, Series, Tags pages with search and drill-down
- Import (add by path), Export (CSV/JSON)
- AI Chat: Ollama, LM Studio, OpenAI; Settings for provider/model list
- Backend: series API, LLM /api/llm/models and /api/llm/chat
- Author Wikipedia links in book modal
- Book detail route /book/[id]
- Read button: open_file path resolution from DB when not provided
- Docs: webapp README, WEBAPP_IMPLEMENTATION_GUIDE, CHANGELOG, API, main README

--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@
 # Copy this file to .env and update with your actual values
 
 # Calibre Server Connection
-CALIBRE_SERVER_URL=http://localhost:8080
+CALIBRE_SERVER_URL=http://localhost:8099
 CALIBRE_USERNAME=sandra
 CALIBRE_PASSWORD=Sec1000cal
 
 # Library Configuration
 # Option 1: Set a base path to auto-discover libraries as subdirectories
-CALIBRE_BASE_PATH=L:/Multimedia Files/Written Word
+CALIBRE_BASE_PATH="L:/Multimedia Files/Written Word"
 
 # Option 2: Manually specify library paths as JSON
-# CALIBRE_LIBRARY_PATHS={"main": "L:/Multimedia Files/Written Word/Main", "it": "L:/Multimedia Files/Written Word/IT", "japanese": "L:/Multimedia Files/Written Word/Japanese", "academic": "L:/Multimedia Files/Written Word/Academic"}
+# CALIBRE_LIBRARY_PATHS={"main": "L:/Multimedia Files/Written Word/Calibre–Bibliothek", "it": "L:/Multimedia Files/Written Word/Calibre–Bibliothek IT", "japanese": "L:/Multimedia Files/Written Word/Calibre–Bibliothek Japanese", "manga": "L:/Multimedia Files/Written Word/Calibre–Bibliothek Manga"}
 
 # Performance Settings  
 CALIBRE_TIMEOUT=30
