--- a/webapp/backend/env.example
+++ b/webapp/backend/env.example
@@ -1,6 +1,9 @@
 # CORS Origins (comma-separated)
 CORS_ORIGINS=http://localhost:13001
 
+# Use direct import for MCP (false=fast, true=HTTP self-call can hang)
+MCP_USE_HTTP=false
+
 # Server Configuration
 HOST=0.0.0.0
 PORT=13000
