--- a/webapp/frontend/env.example
+++ b/webapp/frontend/env.example
@@ -1,2 +1,5 @@
-# API URL
-NEXT_PUBLIC_API_URL=http://localhost:13000
+# API URL (backend)
+NEXT_PUBLIC_API_URL=http://127.0.0.1:13000
+
+# App URL for server-side fetch (Next.js API routes). Required for SSR.
+NEXT_PUBLIC_APP_URL=http://127.0.0.1:13001
