feat: export stats, detail_level, html styles; Anna's Archive import
Export:
- operation=stats with stats_format (csv/json/html)
- detail_level (minimal/standard/full) for csv/json/html
- html_style (catalog/gallery/dashboard) for book exports
- Fixed _generate_styled_html (moved to export_helpers)

Import:
- manage_import: annas_search, from_url, from_path
- Anna's Archive client with configurable mirrors (ANNAS_MIRRORS)
- docs/ANNAS_ARCHIVE_CONFIG.md, .env.example

--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,9 @@ CALIBRE_MAX_LIMIT=200
 # Library Settings
 CALIBRE_LIBRARY_NAME=Sandra's Library
 
+# Anna's Archive (manage_import annas_search)
+# Comma-separated mirror URLs; defaults used if not set
+# ANNAS_MIRRORS=https://annas-archive.org,https://annas-archive.li,https://annas-archive.se
+
 # Development/Debug Settings
 CALIBRE_DEBUG=0
