--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "CalibreEbookManager"
+name = "calibre_ebook_manager"
 version = "0.1.0"
 edition = "2021"
 authors = ["Sandra <sandraschipal@hotmail.com>"]
